# rusty_sts

./: Cargo.toml  README.md  build.rs
src/: app.rs  autosync.rs  detect.rs  main.rs  notification.rs  startup.rs  sync.rs  tray.rs
